correct dark mode issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,6 +4,7 @@
 
 body {
   padding-bottom: 70px;
+  color: var(--global-text-color);
   background-color: var(--global-bg-color);
 
   h1, h2, h3, h4, h5, h6 {
